--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- Primary SEO -->
   <title>Appliance Pixels - Trusted Home Appliance Repair Services</title>
-  <link rel="canonical" href="https://www.appliancepixels.com/" />
+  <link rel="canonical" href="https://www.appliancepixels.shop/" />
   <meta name="title" content="Appliance Pixels - Trusted Home Appliance Repair Services" />
   <meta name="description"
     content="Reliable home appliance repair near you. Experts in washing machines, refrigerators, ACs & more. Certified technicians, same-day service, fair pricing." />
@@ -39,19 +39,19 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.appliancepixels.com/" />
+  <meta property="og:url" content="https://www.appliancepixels.shop/" />
   <meta property="og:title" content="Appliance Pixels - Trusted Home Appliance Repair Services" />
   <meta property="og:description"
     content="Reliable home appliance repair near you. Experts in washing machines, refrigerators, ACs & more. Certified technicians, same-day service, fair pricing." />
-  <meta property="og:image" content="https://www.appliancepixels.com/logo/logo.png" />
+  <meta property="og:image" content="https://www.appliancepixels.shop/logo/logo.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://www.appliancepixels.com/" />
+  <meta property="twitter:url" content="https://www.appliancepixels.shop/" />
   <meta property="twitter:title" content="Appliance Pixels - Trusted Home Appliance Repair Services" />
   <meta property="twitter:description"
     content="Reliable home appliance repair near you. Experts in washing machines, refrigerators, ACs & more. Certified technicians, same-day service, fair pricing." />
-  <meta property="twitter:image" content="https://www.appliancepixels.com/logo/logo.png" />
+  <meta property="twitter:image" content="https://www.appliancepixels.shop/logo/logo.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
