SEO: Add Schema.org, increase word count with static content, and fix language markup

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/logo/fabicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="content-language" content="en">
 
   <!-- Mobile Optimization -->
   <meta name="HandheldFriendly" content="True">
@@ -20,19 +21,19 @@
   <link rel="apple-touch-icon" sizes="167x167" href="/logo/logo.png">
 
   <!-- Apple Startup Icon -->
-  <link rel="apple-touch-startup-image" href="/logo/logo.png">
+  <link rel="apple-startup-image" href="/logo/logo.png">
 
   <!-- Manifest -->
   <link rel="manifest" href="/manifest.json">
 
   <!-- Primary SEO -->
-  <title>Appliance Pixels - Trusted Home Appliance Repair Services</title>
+  <title>Appliance Pixels - Trusted Home Appliance Repair Services in Ohio</title>
   <link rel="canonical" href="https://www.appliancepixels.shop/" />
-  <meta name="title" content="Appliance Pixels - Trusted Home Appliance Repair Services" />
+  <meta name="title" content="Appliance Pixels - Trusted Home Appliance Repair Services in Ohio" />
   <meta name="description"
-    content="Reliable home appliance repair near you. Experts in washing machines, refrigerators, ACs & more. Certified technicians, same-day service, fair pricing." />
+    content="Reliable home appliance repair near Hilliard, Ohio. Experts in washing machines, refrigerators, ACs & more. Certified technicians, same-day service, fair pricing." />
   <meta name="keywords"
-    content="appliance repair, washing machine repair, refrigerator repair, AC repair, microwave fix, dishwasher repair, home appliance maintenance, emergency repair" />
+    content="appliance repair Ohio, washing machine repair Hilliard, refrigerator repair, AC repair Ohio, microwave fix, dishwasher repair, home appliance maintenance, emergency repair" />
   <meta name="robots" content="index, follow" />
   <meta name="language" content="English" />
   <meta name="author" content="Appliance Pixels" />
@@ -59,13 +60,84 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
 
-
+  <!-- Schema.org Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Appliance Pixels",
+      "image": "https://www.appliancepixels.shop/logo/logo.png",
+      "@id": "https://www.appliancepixels.shop",
+      "url": "https://www.appliancepixels.shop",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "4089 Leap Rd",
+        "addressLocality": "Hilliard",
+        "addressRegion": "OH",
+        "postalCode": "43026",
+        "addressCountry": "US"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 40.0345,
+        "longitude": -83.1594
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "00:00",
+        "closes": "23:59"
+      },
+      "sameAs": [
+        "https://www.facebook.com/appliancepixels",
+        "https://www.instagram.com/appliancepixels"
+      ]
+    }
+  </script>
 
 </head>
 
 <body>
   <div id="root">
-    <h1 style="display: none;">Appliance Pixels - Professional Home Appliance Repair Services</h1>
+    <!-- Static Content for SEO Crawlers -->
+    <header>
+      <h1>Appliance Pixels - Professional Home Appliance Repair Services in Hilliard, Ohio</h1>
+    </header>
+    <main>
+      <section>
+        <h2>Expert Appliance Repair Solutions for Your Home</h2>
+        <p>Appliance Pixels is your premier destination for professional and reliable home appliance repair services in Hilliard, Ohio, and the surrounding areas. We specialize in restoring the functionality of your essential household machines with precision and care. Our team of certified technicians is dedicated to providing high-quality service, ensuring your home runs smoothly without interruption.</p>
+      </section>
+      <section>
+        <h3>Our Core Repair Services</h3>
+        <ul>
+          <li><strong>Washing Machine Repair:</strong> We handle all types of washers, including front-load and top-load models. From drum issues to electronic failures, our experts diagnose and fix problems quickly.</li>
+          <li><strong>Refrigerator and Freezer Repair:</strong> Keep your food fresh with our expert cooling system services. We address compressor issues, thermostat malfunctions, and leaks.</li>
+          <li><strong>Air Conditioner Servicing:</strong> Stay comfortable year-round. We provide seasonal maintenance and emergency repairs for split and window AC units.</li>
+          <li><strong>Dishwasher Repair:</strong> We resolve drainage problems, cleaning cycle issues, and mechanical failures in all major dishwasher brands.</li>
+          <li><strong>Oven and Stove Repair:</strong> Our technicians ensure your cooking appliances are safe and efficient, repairing gas and electric ranges, hobs, and ovens.</li>
+          <li><strong>Television Repair:</strong> Specialized technical support for LED, LCD, and Smart TV screens and audio components.</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Why Choose Appliance Pixels?</h2>
+        <p>At Appliance Pixels, we pride ourselves on transparency and technical excellence. We offer a comprehensive 45-day warranty on all parts and labor, giving you peace of mind with every repair. Our technicians use only genuine OEM parts to maintain manufacturer standards and extend the lifespan of your appliances. With our easy online scheduling, you can book a service appointment in less than two minutes. We serve the Hilliard community and nearby locations like Dublin and Upper Arlington with pride.</p>
+        <p>Whether you need an emergency refrigerator fix or a routine washing machine checkup, our professional team is ready to assist. We focus on providing forensic-level diagnostics to identify the root cause of failures, preventing future issues and saving you money in the long run. Contact us today for elite restoration services that you can trust.</p>
+      </section>
+      <section>
+        <h2>Contact Information</h2>
+        <p>Address: 4089 Leap Rd, Hilliard, OH 43026, United States</p>
+        <p>Email: info@appliancepixels.shop</p>
+      </section>
+    </main>
   </div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
