feat: integrate Jivosite widget and reformat index.html content

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
     }
   </script>
 
+  <script src="//code.jivosite.com/widget/cXtkGs8RBM" async></script>
+
 </head>
 
 <body>
@@ -114,23 +116,39 @@
     <main>
       <section>
         <h2>Expert Appliance Repair Solutions for Your Home</h2>
-        <p>Appliance Pixels is your premier destination for professional and reliable home appliance repair services in Hilliard, Ohio, and the surrounding areas. We specialize in restoring the functionality of your essential household machines with precision and care. Our team of certified technicians is dedicated to providing high-quality service, ensuring your home runs smoothly without interruption.</p>
+        <p>Appliance Pixels is your premier destination for professional and reliable home appliance repair services in
+          Hilliard, Ohio, and the surrounding areas. We specialize in restoring the functionality of your essential
+          household machines with precision and care. Our team of certified technicians is dedicated to providing
+          high-quality service, ensuring your home runs smoothly without interruption.</p>
       </section>
       <section>
         <h3>Our Core Repair Services</h3>
         <ul>
-          <li><strong>Washing Machine Repair:</strong> We handle all types of washers, including front-load and top-load models. From drum issues to electronic failures, our experts diagnose and fix problems quickly.</li>
-          <li><strong>Refrigerator and Freezer Repair:</strong> Keep your food fresh with our expert cooling system services. We address compressor issues, thermostat malfunctions, and leaks.</li>
-          <li><strong>Air Conditioner Servicing:</strong> Stay comfortable year-round. We provide seasonal maintenance and emergency repairs for split and window AC units.</li>
-          <li><strong>Dishwasher Repair:</strong> We resolve drainage problems, cleaning cycle issues, and mechanical failures in all major dishwasher brands.</li>
-          <li><strong>Oven and Stove Repair:</strong> Our technicians ensure your cooking appliances are safe and efficient, repairing gas and electric ranges, hobs, and ovens.</li>
-          <li><strong>Television Repair:</strong> Specialized technical support for LED, LCD, and Smart TV screens and audio components.</li>
+          <li><strong>Washing Machine Repair:</strong> We handle all types of washers, including front-load and top-load
+            models. From drum issues to electronic failures, our experts diagnose and fix problems quickly.</li>
+          <li><strong>Refrigerator and Freezer Repair:</strong> Keep your food fresh with our expert cooling system
+            services. We address compressor issues, thermostat malfunctions, and leaks.</li>
+          <li><strong>Air Conditioner Servicing:</strong> Stay comfortable year-round. We provide seasonal maintenance
+            and emergency repairs for split and window AC units.</li>
+          <li><strong>Dishwasher Repair:</strong> We resolve drainage problems, cleaning cycle issues, and mechanical
+            failures in all major dishwasher brands.</li>
+          <li><strong>Oven and Stove Repair:</strong> Our technicians ensure your cooking appliances are safe and
+            efficient, repairing gas and electric ranges, hobs, and ovens.</li>
+          <li><strong>Television Repair:</strong> Specialized technical support for LED, LCD, and Smart TV screens and
+            audio components.</li>
         </ul>
       </section>
       <section>
         <h2>Why Choose Appliance Pixels?</h2>
-        <p>At Appliance Pixels, we pride ourselves on transparency and technical excellence. We offer a comprehensive 45-day warranty on all parts and labor, giving you peace of mind with every repair. Our technicians use only genuine OEM parts to maintain manufacturer standards and extend the lifespan of your appliances. With our easy online scheduling, you can book a service appointment in less than two minutes. We serve the Hilliard community and nearby locations like Dublin and Upper Arlington with pride.</p>
-        <p>Whether you need an emergency refrigerator fix or a routine washing machine checkup, our professional team is ready to assist. We focus on providing forensic-level diagnostics to identify the root cause of failures, preventing future issues and saving you money in the long run. Contact us today for elite restoration services that you can trust.</p>
+        <p>At Appliance Pixels, we pride ourselves on transparency and technical excellence. We offer a comprehensive
+          45-day warranty on all parts and labor, giving you peace of mind with every repair. Our technicians use only
+          genuine OEM parts to maintain manufacturer standards and extend the lifespan of your appliances. With our easy
+          online scheduling, you can book a service appointment in less than two minutes. We serve the Hilliard
+          community and nearby locations like Dublin and Upper Arlington with pride.</p>
+        <p>Whether you need an emergency refrigerator fix or a routine washing machine checkup, our professional team is
+          ready to assist. We focus on providing forensic-level diagnostics to identify the root cause of failures,
+          preventing future issues and saving you money in the long run. Contact us today for elite restoration services
+          that you can trust.</p>
       </section>
       <section>
         <h2>Contact Information</h2>
