--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
 
   <script src="//code.jivosite.com/widget/cXtkGs8RBM" async></script>
 
+  <!-- Calendly link widget begin -->
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+  <!-- Calendly link widget end -->
+
 </head>
 
 <body>
